--- a/abstract.tex
+++ b/abstract.tex
@@ -1,29 +1,18 @@
 \chapter{Abstract}
 
-%\begin{english} %switch to English language rules
-%This should be a 1-page (maximum) summary of your work in English.
-%und hier geht dann das Abstract weiter...
-%\end{english}
+\begin{english} 
+Neuronal networks have been reasearched for decades and are growing in commercial usage. 
+They make it possibility to create systems that can solve very complex problems, e.g. the translation of pictures to text. \footnote{Google Translate app: \url{https://research.googleblog.com/2015/07/how-google-translate-squeezes-deep.html}} 
+Such systems need computational power which was not available in former times. 
+So at the start there were only models and today we can do that nearly on our smartphones. 
+The development of integrated circuits enabled more research and a more efficient development in that research area. 
+But these systems need more computational power for training than our smartphones currently have. 
+For the training there is time needed to adapt and recognize patterns, like a swimmer how wants to adapt a new technique to be more efficient. 
+In general all these systems get more and more evolved and are reaching a level where they are simultaneously integrated in our daily life. 
 
-%Im englischen Abstract sollte inhaltlich das Gleiche
-%stehen wie in der deutschen Kurzfassung. Versuchen Sie daher, die
-%Kurzfassung prä\-zise umzusetzen, ohne aber dabei Wort für Wort zu
-%übersetzen. Beachten Sie bei der Übersetzung, dass gewisse
-%Redewendungen aus dem Deutschen im Englischen kein Pendant haben
-%oder völlig anders formuliert werden müssen und dass die
-%Satzstellung im Englischen sich (bekanntlich) vom Deutschen stark
-%unterscheidet (mehr dazu in Abschn.\ \ref{sec:englisch}). Es
-%empfiehlt sich übrigens -- auch bei höchstem Vertrauen in die
-%persönlichen Englischkenntnisse -- eine kundige Person für das
-%"`proof reading"' zu engagieren.
-
-%Die richtige Übersetzung für "`Diplomarbeit"' ist übrigens
-%schlicht \emph{thesis}, allenfalls  "`diploma thesis"' oder "`Master's thesis"', 
-%auf keinen Fall aber "`diploma work"' oder gar "`dissertation"'. 
-%Für "`Bachelorarbeit"' ist wohl "`Bachelor thesis"' die passende Übersetzung. 
-
-%Übrigens sollte für diesen Abschnitt die \emph{Spracheinstellung} in \latex\ von Deutsch
-%auf Englisch umgeschaltet werden, um die richtige Form der
-%Silbentrennung zu erhalten, die richtigen Anführungszeichen müssen allerdings selbst gesetzt werden %
-%(s.\ dazu die Abschnitte \ref{sec:sprachumschaltung} %
-%und \ref{sec:anfuehrungszeichen}).
+\noindent
+The present thesis includes an example with real data which was developed to visualize a problem and how it could be solved. 
+Additionally the work contains an introduction to the topic of neuronal networks, it's basics and the basic math behind it. 
+By applying the basics to the framework \textit{TensorFlow}, it will get more practical and understandable. 
+For people who are technically not experienced, frameworks like \textit{Keras} exist. 
+\end{english}
