--- a/abstractP.tex
+++ b/abstractP.tex
@@ -1,6 +1,6 @@
 \chapter{Abstract}
 
-\begin{english} %switch to English language rules
+\begin{english} 
 Routing is a daily demand and is used within our navigation-systems like \textit{Google Maps}. 
 The navigation solution contains the functionality to find \textit{point-to-point} routes with fixed sequence stops. 
 The field of transport systems/logistics requires a more sophisticated stop optimiziation. 
