--- a/einleitung.tex
+++ b/einleitung.tex
@@ -3,17 +3,13 @@
 
 \section{Motivation}
 
-%Zeitlich immer mehr Relevant
-Kaum ein Gebiet existiert so lange wie maschinelles Lernen und erlebte in den letzten 20 Jahren einen Aufschwung in den Punkten Relevanz, Weiterentwicklung und Alltagstauglichkeit wie kein anderes Gebiet der Informationstechnologie. 
-Ein Umstand dafür ist unter anderem die technische Voraussetzung große Systeme zu entwickeln und diese auch der Menschheit zugänglich zu machen. 
+Kaum ein anderes Gebiet der Informationstechnologie existiert so lange wie maschinelles Lernen und erlebte in den letzten 20 Jahren einen Aufschwung in den Punkten Relevanz, Weiterentwicklung und Alltagstauglichkeit. 
+Ein Umstand dafür ist unter anderem die technische Voraussetzung große Systeme entwickeln zu können und diese auch der Menschheit zugänglich zu machen. 
 Im Speziellen wurde hierbei der Fokus auf neuronale Netzwerke gelegt, welche noch weiter erforscht werden, aber auch schon im Einsatz sind. \newline
 
 \noindent
-Die großen Datenmengen, die in den letzten Jahren zu verarbeiten und zu analysieren sind, stellen ein Problem dar. 
+Die großen Datenmengen, die in den letzten Jahren zu verarbeiten und zu analysieren waren, stellen ein Problem dar. 
 So befindet sich kein Mensch in der Lage, effizient Millionen an Datensätzen zu analysieren und Zusammenhänge darin zu finden und dies in adäquater Zeit zu tun. \newline
-%\noindent
-%Eine sehr hartnäckige Behauptung im Zusammenhang mit maschinellem Lernen ist, dass dieses Spiel aufgrund der vielen strategischen Elemente nicht erfolgreich
-%durch eine Maschine gespielt werden kann.
 
 \noindent
 Im Zuge dieser Arbeit sollen die Grundlagen im Bereich des maschinellen Lernens, im Speziellen mit neuronalen Netzwerken näher gebracht werden. 
@@ -33,59 +29,25 @@ Ein Punkt stellt das Gebiet des maschinellen Lernens generell dar, sowie die pra
 Im Speziellen bieten neuronale Netzwerke neue Möglichkeiten, Probleme in der Informationstechnologie zu lösen, sowie Vorgänge in der Natur besser zu verstehen. \newline
 
 \noindent
-Zum anderen die Frage, was ist TensorFlow, wofür steht und wofür kann dies eingesetzt werden?  
+Zum anderen die Frage, was ist TensorFlow, wofür steht es und wofür kann dies eingesetzt werden?  
 Diese Bibliothek bietet eine gute Unterstützung sich dem Gebiet des maschinellen Lernens zu nähern, aber auch die Möglichkeit, dies in praktischen Fällen einzusetzen. 
 
-%Des Weiteren wird dies auch durch die großen Datenmassen weiter getrieben, da diese weder von einem Menschen noch von einem Algorithmus effizient analysiert werden können. 
-%Dies kommt zustande, da sich die Daten sehr schnell verändern mit welchen meist gearbeitet wird und somit ein klassischer Algorithmus erst angepasst werden muss. 
-%Mit maschinellen Lernen kann dieser Schritt oft zum Teil übersprungen werden und indirekt mit der Ergebnis Analyse fortgesetzt werden. \newline
-
 \section{Zielsetzung}
-
-%Einführung in das Thema NNN
 
 Die Arbeit soll das Thema maschinelles Lernen - neuronale Netzwerke so beleuchten, dass es möglich ist, diese mit den Grundlagen zu verstehen und zu erlernen. 
 Des Weiteren wird die Bibliothek TensorFlow näher gebracht, welche eine gute Unterstützung bietet, eine Problemstellung zu lösen und diese Lösung direkt in einer Applikation einzusetzen. \newline
 
 \noindent
-Die Betrachtung der benötigten Punkte sowie Gebiete sollte auf breiter Front erfolgen, am Ende sollte jeder Leser ein Verständnis dafür haben. 
+Die Betrachtung der benötigten Punkte und Gebiete erfolgt auf breiter Front, am Ende sollte jeder Leser ein Verständnis dafür haben. 
 Außerdem sollte er in der Lage sein können, den Umfang einer solchen Aufgabenstellung festzustellen. 
 Als Konsequenz aus dieser Betrachtungsweise können allerdings nicht alle Punkte in ihrer ganzen Tiefe erfasst werden. 
-%Insbesondere wenn es thematisch in die Tiefe geht. 
-Hier wäre es erforderlich, noch weitere Lektüre einzubeziehen und diese zu studieren. \newline
+Hier wäre es erforderlich, noch weitere Literatur einzubeziehen und diese zu studieren. \newline
 
 \noindent
 Am Ende der Arbeit wird eine mögliche Lösung für ein praktisches Beispiel entwickelt und näher erklärt.
-Dieses wird als praktische Repräsentation verwendet, um den Umfang der Bibliothek noch besser zu verstehen. \newline
+Dieses wird als praktische Repräsentation verwendet, um den Umfang von TensorFlow noch besser zu verstehen. \newline
 
 \noindent
-Der Anspruch, dass sich mit dieser Technik der Datenanalyse jegliche Problemstellung gelöst werden kann, ist ausdrücklich kein Ziel dieser Arbeit. 
+Der Anspruch, dass mit dieser Technik der Datenanalyse jegliche Problemstellung gelöst werden kann, ist ausdrücklich kein Ziel dieser Arbeit. 
 Des Weiteren wird teilweise nicht tiefer auf Themen eingegangen, da dies den Rahmen dieser Arbeit übersteigen würde. 
 Diese Arbeit sollte aber als möglicher Startpunkt, für einen Einstieg in die Welt des maschinellen Lernens - neuronale Netzwerke, dienen. 
-
-
-%\section{Allgemeines und Motivation}
-
-%Dieses Dokument ist als vorwiegend technische Starthilfe für das
-%Erstellen einer Masterarbeit (oder Bachelorarbeit) mit \latex
-%gedacht und ist die Weiterentwicklung einer früheren
-%Vorlage\footnote{Nicht mehr verfügbar.} für das Arbeiten mit
-%Microsoft \emph{Word}. Während ursprünglich daran gedacht war, die
-%bestehende Vorlage einfach in \latex zu übernehmen, wurde rasch
-%klar, dass allein aufgrund der großen Unterschiede zum Arbeiten
-%mit \emph{Word} ein gänzlich anderer Ansatz notwendig wurde. Dazu
-%kamen zahlreiche Erfahrungen mit Diplomarbeiten in den
-%niachfolgenden Jahren, die zu einigen zusätzlichen Hinweisen Anlass gaben.
-
-%Das vorliegende Dokument dient einem zweifachen Zweck: 
-%\emph{erstens} als Erläuterung und Anleitung, \emph{zweitens} als
-%direkter Ausgangspunkt für die eigene Arbeit. Angenommen wird,
-%dass der Leser bereits über elementare Kenntnisse im Umgang mit
-%\latex verfügt. In diesem Fall sollte -- eine einwandfreie
-%Installation der Software vorausgesetzt -- der Arbeit nichts mehr
-%im Wege stehen. Auch sonst ist der Start mit \latex\ nicht
-%schwierig, da viele hilfreiche Informationen auf den zugehörigen
-%Webseiten zu finden sind (s.\ Kap.~\ref{cha:Einleitung}).
-
-
-%\section{Ziel der Arbeit}
