--- a/kurzfassung.tex
+++ b/kurzfassung.tex
@@ -1,71 +1,23 @@
-
 \chapter{Kurzfassung}
 
-NN sind seit Jahren vorhanden
-Zeitlich bedingt nicht umsetzbar da technische Voraussetzung nicht erfüllt
-werden immer mehr eingesetzt 
-Unterstützung im Alltagsleben
+Neuronale Netzwerke werden seit Jahrzehnten erforscht und auch seit geraumer Zeit eingesetzt. 
+Solche Netzwerke ermöglichen es, komplexe Systeme für logisch sehr komplexe Aufgaben zu entwickeln. 
+Zum Beispiel werden bei der Übersetzung von Texten in Bildern neuronale Netzwerke eingesetzt. 
+Diese Ausführung geschieht dabei zum Teil auf den Smartphones lokal. 
+Eine lokale Ausführung war dabei nicht immer möglich, da die dafür benötigten Ressourcen nicht vorhanden waren. 
+Zu Beginn der Erforschung von neuronalen Netzwerken konnten nur Modelle erstellt werden. 
+Modelle wurden deshalb herangezogen, da die technischen Voraussetzungen noch nicht gegeben waren. 
+Mit der Entwicklung von integrierten Schaltkreisen und immer leistungsfähigeren Recheneinheiten konnte diese Grundlage geschaffen werden. 
+Dabei existieren noch Probleme, denn ein maschinell lernendes System muss trainiert werden. 
+Ein solches Training kann zum Beispiel mit einem Schwimmer verglichen werden, der einen neuen Technikablauf integrieren möchte. 
+So ein Vorgang benötigt viel Zeit bis der Ablauf adaptiert wird und im Anschluss fast vollautomatisch abläuft. 
+Ähnlich geht es den neuronalen Netzwerken, welche anhand des Ergebnisses angepasst werden müssen. 
+Der Einzug von maschinell lernenden Systemen in die Zivilgesellschaft ist dank ihres Erfolgs praktisch unumgänglich. 
 
-Ziel der Arbeit eine Einführung in die Welt der NNN mit Hilfe eines Frameworks
-
-
-%Maschinelles lernen und tiefe neuronale Netze werden unter anderem in 
-%unserem Jahrzehnt sehr häufig eingesetzt um technische Problemstellungen 
-%zu lösen, für des eine in vernünftiger Zeit keine Brauchbaren 
-%iterative Algorithmen gibt. Zusätzlich werden maschinell 
-%lernende System immer häufiger in unserem allgemeinen Alttag 
-%eingesetzt um uns zu unterstützen und um von den Benützern zu lernen.
-%Ein neuronales Netzwerk kann aber nicht einfach erstellt werden
-%und im nächsten Schritt in der Praxis eingesetzt werden. Dies würde 
-%zu erheblichen Problemen führen. Diese Netzwerke müssen trainiert werden
-%sowie getestet. 
-
-
-%Im Rahmen dieser Bachelorarbeit werden die wichtigsten theoretischen Konzepte zu 
-%maschinellem lernen und tiefe neuronale Netze theoretisch zu vergleichen und empirisch zu überprüfen. 
-%Dazu wird das TensorFlow-Bibliothek als Beispiel verwendet und analysiert. Aus dieser Bibliothek werden 
-%die benötigten Teile heraus genommen und in einem Python-Script zusammen gefügt um in Bildern mit Gesichtern 
-%gewisse Züge zu erkennen und zu Klassifizieren. Durch die Analysephasen werden theoretische und berechnete Annahmen 
-%untermauert oder in Frage gestellt. Folgende Schlussfolgerungen gehen jedoch nach Auswertung 
-%der Ergebnisse über die theoretischen Annahmen hinaus: Ist das TensorFlow-System 
-%in der Lage, Muster aus unterschiedlichen Datentypen, wie zum Beispiel Bilder, 
-%Videos oder Videostreams, zu erkennen und von diesen selbst zu lernen?
-
-%Die Bachelorarbeit ist sowohl für Studierende im Studium Software Engineering sowie 
-%Informatik als auch für Lehrende in diesen Bereichen interessant.
-
-
-
-
-%An dieser Stelle steht eine Zusammenfassung der Arbeit, Umfang
-%max.\ 1 Seite. Im Unterschied zu anderen Kapiteln ist die
-%Kurzfassung (und das Abstract) üblicherweise nicht in Abschnitte
-%und Unterabschnitte gegliedert. 
-%Auch Fußnoten sind hier falsch am Platz.
-%
-%Kurzfassungen werden übrigens häufig -- zusammen mit Autor und Titel
-%der Arbeit -- %
-%in Literaturdatenbanken aufgenommen. Es ist daher darauf zu
-%achten, dass die Information in der Kurzfassung für sich 
-%\emph{allein} (\dah ohne weitere Teile der Arbeit) zusammenhängend und
-%abgeschlossen ist. Insbesondere werden an dieser Stelle (wie \ua
-%auch im \emph{Titel} der Arbeit und im \emph{Abstract})
-%normalerweise \emph{keine Literaturverweise} verwendet! Falls
-%unbedingt solche benötigt werden -- etwa weil die Arbeit eine
-%Weiterentwicklung einer bestimmten, früheren Arbeit darstellt --,
-%dann sind \emph{vollständige} Quellenangaben in der Kurzfassung
-%selbst notwendig, \zB %
-%[\textsc{Zobel} J.: \textit{Writing for Computer Science -- The Art of
-%Effective Commu\-nica\-tion}. Springer-Verlag, Singa\-pur, 1997].
-%
-%Weiters sollte daran gedacht werden, dass bei der Aufnahme in Datenbanken
-%Sonderzeichen oder etwa Aufzählungen mit "`Knödellisten"' in der
-%Regel verloren gehen. Dasselbe gilt natürlich auch für das 
-%\emph{Abstract}.
-%
-%
-%Inhaltlich sollte die Kurzfassung \emph{keine} Auflistung der
-%einzelnen Kapitel sein (dafür ist das Einleitungskapitel
-%vorgesehen), sondern dem Leser einen kompakten, inhaltlichen
-%Überblick über die gesamte Arbeit verschaffen. Der hier verwendete
-%Aufbau ist daher zwangsläufig anders als der in der Einleitung.
+\noindent
+Im Rahmen dieser Bachelorarbeit wurde ein Beispiel anhand realer Daten umgesetzt und implementiert. 
+An diesem Beispiel werden einige Eigenheiten solcher Systeme erklärt und beschrieben. 
+Zusätzlich beinhaltet diese Arbeit auch eine Einführung in das Gebiet der neuronalen Netzwerke. 
+Diese Grundlagen werden mit Hilfe der Bibliothek \textit{TensorFlow} vervollständigt. 
+\textit{TensorFlow} bietet eine guten Einstieg, damit die Grundlagen besser und praktischer verstanden werden. 
+Technisch nicht so versierte Personen sollten nach dem Erlernen der Grundlagen deshalb eine Abstraktion verwenden, wie zum Beispiel \textit{Keras}. 
