--- a/literatur.bib
+++ b/literatur.bib
@@ -1,3 +1,16 @@
+@article{DBLP:journals/corr/SimonyanZ14a,
+  author    = {Karen Simonyan and
+               Andrew Zisserman},
+  title     = {Very Deep Convolutional Networks for Large-Scale Image Recognition},
+  journal   = {CoRR},
+  volume    = {abs/1409.1556},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1409.1556},
+  timestamp = {Wed, 01 Oct 2014 15:00:05 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/SimonyanZ14a},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
 @article{DBLP:journals/corr/KingmaB14,
   author    = {Diederik P. Kingma and
                Jimmy Ba},
@@ -112,466 +125,128 @@
 @article{wp2015tensorflow,
   title={Tensorflow: Large-scale machine learning on heterogeneous distributed systems},
   author={Abadi, Martin and Agarwal, Ashish and Barham, Paul and Brevdo, Eugene and Chen, Zhifeng and Citro, Craig and Corrado, Greg S and Davis, Andy and Dean, Jeffrey and Devin, Matthieu and others},
-  journal={Google Research Whitepaper, http://research.google.com/pubs/archive/45166.pdf},
-  year={2015}
+  journal={Google Research Whitepaper},
+  year={2015},
+  url={http://research.google.com/pubs/archive/45166.pdf}
 }
 
-@manual{amsldoc02,
-	author={{American Mathematical Society}},
-	title={User's Guide for the {\tt amsmath} Package},
-	year={2002},
-	month={2},
-	version={2.0},
-	url={ftp://ftp.ams.org/pub/tex/doc/amsmath/amsldoc.pdf},
-	hyphenation={english},
-	keywords={manualexample1}
+
+@article{clarke1964scheduling,
+  title={Scheduling of vehicles from a central depot to a number of delivery points},
+  author={Clarke, Geoff and Wright, John W},
+  journal={Operations research},
+  volume={12},
+  number={4},
+  pages={568--581},
+  year={1964},
+  publisher={INFORMS}
 }
 
-@thesis{Artner07,
-	author={Artner, Nicole Maria},
-	title={Analyse und Reimplementierung des Mean-Shift Tracking-Verfahrens},
-	type={Diplomarbeit},
-	year={2007},
-	month={7},
-	institution={University of Applied Sciences Upper Austria, Digitale Medien},
-	location={Hagenberg, Austria},
-	url={http://theses.fh-hagenberg.at/thesis/Artner07},
-	hyphenation={german},
-	keywords={diplomarbeitexample1} 
+@misc{upsWorldWide,
+	title={UPS - Weltweit},
+	url={https://www.ups.com/content/at/de/about/facts/worldwide.html}
 }
 
-@thesis{Bacher04,
-	author={Bacher, Florian},
-	title={Interaktionsmöglichkeiten mit Bildschirmen und großflächigen Projektionen},
-	type={Bachelorarbeit},
-	year={2004},
-	month={6},
-	institution={University of Applied Sciences Upper Austria, Medientechnik und {-design}},
-	location={Hagenberg, Austria},
-	hyphenation={german},
-	keywords={bachelorarbeitexample1} 
+@misc{jp2010opttrans,
+  author = {Jakob Puchinger},
+  title = {Optimierungsverfahren in der
+  Transportlogistik},
+  url = {https://www.ads.tuwien.ac.at/teaching/ss10/Transportlogistik/OTL_10.pdf},
+  year = {2010}
 }
 
-@manual{Bezos2014,
-	author={Bezos, Javier and Braams, Johannes L.},
-	title={Babel -- Multilingual support for Plain \TeX\ or \LaTeX},
-	year={2014},
-	month={9},
-	version={3.9l},
-	url={http://mirrors.ctan.org/tex-archive/macros/latex/required/babel/base/babel.pdf},
-	hyphenation={english}
+@phdthesis{wurzer2010fallbeispiele,
+  title={Fallbeispiele zur Tourenplanung mit Hilfe spezieller Tourenplanungssoftware am Beispiel eines Grazer Kleinunternehmens},
+  author={Wurzer, Bernhard},
+  year={2010},
+  school={uniwien}
 }
 
-@inproceedings{Burger87,
-	author={Burger, Wilhelm and Bhanu, Bir},
-	title={Qualitative Motion Understanding},
-	booktitle={Proceedings of the Intl.\ Joint Conference on Artificial Intelligence},
-	year={1987},
-	month={5},
-	editor={McDermott, John P.},
-	venue={Mailand},
-	publisher={Morgan Kaufmann Publishers},
-	location={San Francisco},
-	pages={819-821},
-	hyphenation={english},
-	keywords={inproceedingsexample1}
+@article{clarke1964scheduling,
+  title={Scheduling of vehicles from a central depot to a number of delivery points},
+  author={Clarke, Geoff and Wright, John W},
+  journal={Operations research},
+  volume={12},
+  number={4},
+  pages={568--581},
+  year={1964},
+  publisher={INFORMS}
 }
 
-@book{BurgerBurge06,
-	author={Burger, Wilhelm and Burge, Mark},
-	title={Digitale Bildverarbeitung},
-	subtitle={Eine Einführung mit Java und ImageJ},
-	publisher={Springer-Verlag},
-	location={Heidelberg},
-	edition={2},
-	year={2006},
-	hyphenation={german},
-	keywords={bookexample1}
+@misc{isl2008ea,
+  title={Intelligente Systeme in der Logistik},
+  author={Christian Fischer},
+  url={http://www.informatik.uni-ulm.de},
+  year={2008}
 }
 
-@book{BurgerBurge08,
-	author={Burger, Wilhelm and Burge, Mark},
-	title={Digital Image processing},
-	subtitle={An Algorithmic Introduction Using Java},
-	publisher={Springer},
-	location={New York},
-	year={2008},
-	hyphenation={english}
+@techreport{beyer2001evolution,
+  title={Evolution are Algorithmen Begriffe und Definitionen},
+  author={Beyer, Hans-Georg and Brucherseifer, Eva and Jakob, Wilfried and Pohlheim, Hartmut and Sendho, Bernhard and To, Thanh Binh}
 }
 
-@manual{Carlisle2014,
-	author={Carlisle, D. P.},
-	title={Packages in the {`graphics'} bundle},
-	year={2014},
-	month={4},
-	url={http://mirrors.ctan.org/macros/latex/required/graphics/grfguide.pdf},
-	hyphenation={english},
+@incollection{abraham2006swarm,
+  title={Swarm intelligence: foundations, perspectives and applications},
+  author={Abraham, Ajith and Guo, He and Liu, Hongbo},
+  booktitle={Swarm Intelligent Systems},
+  pages={3--25},
+  year={2006},
+  publisher={Springer}
 }
 
-@online{CocaCola1940,
-	author={Wolcott, Marion Post},
-	year={1940},
-	month={8},
-	url={http://www.loc.gov/pictures/item/fsa1992000140/PP/}
+@inproceedings{mucherino2015ant,
+  title={Ant colony optimization with environment changes: an application to GPS surveying},
+  author={Mucherino, Antonio and Fidanova, Stefka and Ganzha, Maria},
+  booktitle={Computer Science and Information Systems (FedCSIS), 2015 Federated Conference on},
+  pages={495--500},
+  year={2015},
+  organization={IEEE}
 }
 
-@manual{Cochran05,
-	author={Cochran, Steven Douglas},
-	title={The {Subfig} Package},
-	year={2005},
-	month={7},
-	url={http://mirrors.ctan.org/macros/latex/contrib/subfig/subfig.pdf},
-	hyphenation={english}
+@inproceedings{neagoe2010ant,
+  title={Ant colony optimization for logistic regression and its application to wine quality assessment},
+  author={Neagoe, Victor-Emil and Neghina, Catalina-Elena and Neghina, Mihai},
+  booktitle={International Conference on Mathematical Models for Engineering Science—Proceedings, MMES},
+  volume={10},
+  pages={195--200},
+  year={2010}
 }
 
-@manual{Daniel2012,
-	author={Daniel, Marco and Gundlach, Patrick and Schmidt, Walter and Knappen, Jörg and Partl, Hubert and Hyna, Irene},
-	title={\LaTeX2e-Kurzbeschreibung},
-	year={2012},
-	month={7},
-	version={3.0},
-	url={http://mirrors.ctan.org/info/lshort/german/l2kurz.pdf},
-	hyphenation={german}
+@article{laporte1992vehicle,
+  title={The vehicle routing problem: An overview of exact and approximate algorithms},
+  author={Laporte, Gilbert},
+  journal={European journal of operational research},
+  volume={59},
+  number={3},
+  pages={345--358},
+  year={1992},
+  publisher={Elsevier}
 }
 
-@techreport{Drake48,
-	author={Drake, Huber M. and McLaughlin, Milton D. and Goodman, Harold R.},
-	title={Results obtained during accelerated transonic tests of the {Bell}
-		{XS-1} airplane in flights to a {MACH} number of 0.92},
-	institution={NASA Dryden Flight Research Center},
-	year={1948},
-	month={1},
-	location={Edwards, CA},
-	number={NACA-RM-L8A05A},
-	url={http://www.nasa.gov/centers/dryden/pdf/87528main_RM-L8A05A.pdf},
-	hyphenation={english},
-	keywords={techreportexample1}
+@article{kirkpatrick1983optimization,
+  title={Optimization by simulated annealing},
+  author={Kirkpatrick, Scott and Vecchi, Mario P and others},
+  journal={science},
+  volume={220},
+  number={4598},
+  pages={671--680},
+  year={1983},
+  publisher={Washington}
 }
 
-@book{Duden97,
-	author={Friedrich, Christoph},
-	title={Schriftliche Arbeiten im technisch-natur\-wissen\-schaft\-lichen Studium}, 
-	subtitle={Ein Leitfaden zur effektiven Erstellung und zum Einsatz moderner Arbeitsmethoden},
-	publisher={Bibliographisches Institut},
-	series={Duden Taschenbücher},
-	volume={27},
-	location={Mannheim},
-	year={1997},
-	hyphenation={german}
+@book{applegate2011traveling,
+  title={The traveling salesman problem: a computational study},
+  author={Applegate, David L and Bixby, Robert E and Chvatal, Vasek and Cook, William J},
+  year={2011},
+  publisher={Princeton university press}
 }
 
-% Kept for future reference once Biber 1.9 bug with hyphens is fixed
-@book{Duden97hyphen,
-	author={Friedrich, Christoph},
-	title={Schriftliche Arbeiten im technisch-natur\-wissen\-schaft\-lichen Studium},
-	subtitle={Ein Leitfaden zur effektiven Erstellung und zum Einsatz moderner Arbeitsmethoden},
-	publisher={Bibliographisches Institut},
-	series={Duden Taschenbücher},
-	volume={27},
-	location={Mannheim},
-	year={1997},
-	hyphenation={german}
+@article{wiener2003branch,
+  title={Branch and Bound Implementations of the Traveling Salesperson Problem - Part 4: Distributed processing solution using RMI.},
+  author={Wiener, Richard},
+  journal={Journal of Object Technology},
+  volume={2},
+  number={6},
+  pages={51--65},
+  year={2003}
 }
-
-@incollection{Ears99,
-	author={Burge, Mark and Burger, Wilhelm},
-	title={Ear Biometrics},
-	booktitle={Biometrics: Personal Identification in Networked Society},
-	publisher={Kluwer Academic Publishers},
-	year={1999},
-	location={Boston},
-	editor={Jain, Anil K. and Bolle, Ruud and Pankanti, Sharath},
-	chapter={13},
-	pages={273-285},
-	hyphenation={english},
-	keywords={incollectionexample1}
-}
-
-@thesis{Eberl87,
-	author={Eberl, Gerhard},
-	title={Automatischer Landeanflug durch Rechnersehen},
-	type={phdthesis},
-	year={1987},
-	month={8},
-	institution={Universität der Bundeswehr, Fakultät für Raum- und Luftfahrttechnik},
-	location={München},
-	hyphenation={german},
-	keywords={phdthesisexample1}
-}
-
-@misc{EuRichtlinie2000,
-	author={{Europäische Union}},
-	title={Richtline 2000/14/EG des Europäischen Parlaments und des Rates vom 8.\ Mai 2000 zur 
-		Angleichung der Rechtsvorschriften der Mitgliedstaaten über umweltbelastende Geräuschemissionen 
-		von zur Verwendung im Freien vorgesehenen Geräten und Maschinen},
-	howpublished={Amtsblatt der Europäischen Gemeinschaften, L 162},
-	url={http://eur-lex.europa.eu/LexUriServ/LexUriServ.do?uri=CONSLEG:2000L0014:20051227:de:PDF},
-	hyphenation={german}
-}
-
-@book{Faires34,
-	author={Faires, V. M.},
-	title={Design of Machine Elements},
-	publisher={The Macmillan Company},
-	year={1934},
-	note={Originalausgabe 1920},
-	hyphenation={english}
-}
-
-@online{Feder2006,
-	author={Feder, Alexander},
-	title={{BibTeX.org}},
-	year={2006},
-	url={http://www.bibtex.org/},
-}
-
-@misc{FhStG93,
-	title={Bundesgesetz über Fachhochschul-Studiengänge},
-	howpublished={BGBl.\ Nr.\ 340/1993, zuletzt geändert mit Bundesgesetz BGBl.\ I Nr.\ 45/2014},
-	url={https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=10009895},
-	hyphenation={german}
-}
-
-@video{Futurama99,
-	author={Groening, Matt},
-	title={Futurama},
-	titleaddon={Season 1 Collection},
-	howpublished={DVD},
-	year={2002},
-	month={2},
-	note={Twentieth Century Fox Home Entertainment},
-	hyphenation={english},
-	keywords={videoexample1}
-}
-
-@article{Guttman01,
-	author={Guttman, Erik},
-	title={Autoconfiguration for {IP} Networking},
-	journal={IEEE Internet Computing},
-	volume={5},
-	issue={Mai/Juni},
-	year={2001},
-	pages={81-86},
-	hyphenation={english}
-}
-
-@book{Higham98,
-	author={Higham, Nicholas J.},
-	title={Handbook of Writing for the Mathematical Sciences},
-	publisher={Society for Industrial and Applied Mathematics (SIAM)},
-	location={Philadelphia},
-	edition={2},
-	year={1998},
-	url={http://www.maths.manchester.ac.uk/~higham/hwms/},
-	hyphenation={english}
-}
-
-@online{HistoryOfComputers2008,
-	title={History of Computers},
-	year={2008},
-	month={9},
-	url={http://www.youtube.com/watch?v=LvKxJ3bQRKE},
-	hyphenation={english},
-	keywords={onlineexample1}
-}
-
-@online{IBM360,
-	url={http://www.plyojump.com/classes/mainframe_era.php},
-	keywords={onlineexample3}
-}
-
-@book{Kopka2003,
-	author={Kopka, Helmut and Daly, Patrick William},
-	title={A Guide to \LaTeX},
-	series={Tools and Techniques for Computer Typesetting},
-	publisher={Addison-Wesley},
-	location={Reading, MA},
-	year={2003},
-	edition={4},
-	hyphenation={english}
-}
-
-@book{Lamport94,
-	author={Lamport, Leslie},
-	title={{LaTeX}, A Document Preparation System},
-	subtitle={User's Guide and Reference Manual},
-	publisher={Addison-Wesley},
-	location={Reading, MA},
-	year={1994},
-	edition={2},
-	hyphenation={english}
-}
-
-@book{Lamport95,
-	author={Lamport, Leslie},
-	title={Das {LaTeX}-Handbuch},
-	publisher={Addison-Wesley},
-	location={Reading, MA},
-	year={1995},
-	edition={3},
-	hyphenation={german}
-}
-
-@manual{Lehman2014,
-	author={Lehman, Philipp},
-	title={The {Biblatex} Package},
-	subtitle={Programmable Bibliographies and Citations},
-	year={2014},
-	month={6},
-	version={2.9a},
-	url={http://mirrors.ctan.org/macros/latex/contrib/biblatex/doc/biblatex.pdf},
-	hyphenation={english}
-}
-
-@manual{mathmode10,
-	author={Voß, Herbert},
-	title={Math mode},
-	year={2010},
-	month={12},
-	version={2.47},
-	url={http://mirrors.ctan.org/info/math/voss/mathmode/Mathmode.pdf},
-	hyphenation={english}
-}
-
-@article{Mermin89,
-	author={Mermin, Nathaniel David},
-	title={What's wrong with these equations?},
-	journal={Physics Today},
-	volume={42},
-	number={10},
-	year={1989},
-	pages={9-11},
-	hyphenation={english},
-	keywords={articleexample1}
-}
-
-@movie{Nosferatu22,
-	title={Nosferatu -- A Symphony of Horrors},
-	howpublished={Film},
-	year={1922},
-	note={Drehbuch/Regie: F.\ W.\ Murnau. Mit Max Schreck, Gustav von Wangenheim, Greta Schröder.},
-	hyphenation={english},
-	keywords={movieexample1}
-}
-
-@manual{Oetiker2014,
-	author={Oetiker, Tobias and Partl, Hubert and Hyna, Irene and Schlegl, Elisabeth},
-	title={The Not So Short Introduction to \LaTeXe},
-	subtitle={Or \LaTeXe in 157 minutes},
-	year={2014},
-	month={10},
-	version={5.04},
-	url={http://mirrors.ctan.org/info/lshort/english/lshort.pdf},
-	hypenation={english}
-}
-
-@misc{OoeRaumordnungsgesetz94,
-	title={Oberösterreichisches Raumordnungsgesetz 1994},
-	howpublished={LGBl 1994/114 idF 1995/93},
-	url={http://www.ris.bka.gv.at/Dokumente/LrOO/LOO40007538/LOO40007538.pdf},
-	hyphenation={german},
-	keywords={miscexample1}
-}
-
-@manual{Oostrum2004,
-	author={Oostrum, {Piet van}},
-	title={Page layout in {LaTeX}},
-	year={2004},
-	month={3},
-	url={http://mirrors.ctan.org/macros/latex/contrib/fancyhdr/fancyhdr.pdf},
-	hyphenation={english}
-}
-
-@manual{Pakin2009,
-	author={Pakin, Scott},
-	title={The Comprehensive {LaTeX} Symbol List},
-	year={2009},
-	month={11},
-	url={http://mirrors.ctan.org/info/symbols/comprehensive/symbols-a4.pdf},
-	hyphenation={english}
-}
-
-@manual{Patashnik88,
-	author={Patashnik, Oren},
-	title={{BiBTeXing}},
-	year={1988},
-	month={2},
-	url={http://www.literateprogramming.com/btxdoc.pdf},
-	hyphenation={english}
-}
-
-@movie{Psycho60,
-	title={Psycho},
-	howpublished={Film},
-	year={1960},
-	note={Regie: Alfred Hitchcock, 
-		Drehbuch: Joseph Stefano.
-		Nach dem Roman von Robert Bloch. 
-		Mit Anthony Perkins, Vera Miles, Janet Leigh.},
-	hyphenation={english}
-}
-
-@manual{Raichle98,
-	author={Raichle, Bernd},
-	title={Kurzbeschreibung {german.sty} und {ngerman.sty}},
-	year={1998},
-	month={7},
-	version={2.5},
-	url={http://mirrors.ctan.org/language/german/gerdoc.pdf},
-	hyphenation={german}
-}
-
-@manual{Sommerfeldt2011,
-	author={Sommerfeldt, Axel},
-	title={Anpassen der Abbildungs- und Tabellenbeschriftungen},
-	year={2011},
-	month={11},
-	url={http://mirrors.ctan.org/macros/latex/contrib/caption/caption-deu.pdf},
-	hyphenation={german}
-}
-
-% URL offline - entry replaced by Feder2006
-@manual{Taylor96,
-	author={Taylor, Paul and Dawson, Mark},
-	title={Bibliography files in {Hypatia}},
-	year={1996},
-	month={6},
-	url={http://hypatia.dcs.qmw.ac.uk/html/bibliography.html},
-	hyphenation={english}
-}
-
-@online{WikiReliquienschrein2014,
-	url={http://de.wikipedia.org/wiki/Reliquienschrein},
-	urldate={2014-11-20},
-	keywords={onlineexample2}
-}
-
-@audio{Zappa95,
-	author={Zappa, Frank},
-	title={Freak Out},
-	howpublished={Audio-CD},
-	year={1995},
-	month={5},
-	note={Rykodisc, New York},
-	hyphenation={english},
-	keywords={audioexample1}
-}
-
-@software{LegendOfZelda98,
-	author={Miyamoto, Shigeru and Aonuma, Eiji and Koizumi, Yoshiaki},
-	title={The Legend of Zelda: Ocarina of Time},
-	howpublished={N64-Spielmodul},
-	publisher={Nintendo},
-	year={1998},
-	hyphenation={english}
-}
-
-@book{Hemleben1969,
-	author={Hemleben, Johannes},
-	title={Galilei, Galileo},
-	publisher={rororo},
-	year={1969},
-	edition={20},
-	hyphenation={german}
-}
-
