--- a/zusammenfassungAusblick.tex
+++ b/zusammenfassungAusblick.tex
@@ -3,63 +3,43 @@
 
 \section{Zusammenfassung}
 
-%Maschinelles Lernen sehr einsatzfähig
 \noindent
 Maschinelles Lernen bietet sich in sehr vielen Fällen an, eingesetzt zu werden. 
 Es steht aber fest, dass neuronale Netzwerke nichts Außergewöhnliches erschaffen oder gar von sich aus etwas Unvorhersehbares produzieren. 
 Im Kern kann jeder Zustand eines Netzwerkes festgestellt werden und somit auch nachvollzogen werden, beziehungsweise mathematisch nachgerechnet werden. 
-Grundsätzlich kann jedes Problem, welches sich in irgendeiner Art und Weise als Funktion beschreiben lässt, in einem neuronalen Netzwerk abgebildet werden kann. \newline
+Grundsätzlich kann jedes Problem, welches sich in irgendeiner Art und Weise als Funktion beschreiben lässt, in einem neuronalen Netzwerk abgebildet werden. \newline
 
-%erlernbar & Vertiefen 
 \noindent
-Das Gebiet des maschinellen Lernens bietet einen nicht abschätzbare Umfang an Möglichkeiten. 
-Trotzdem kann es auf einfache Grundregeln der Mathematik und Informatik herabgebrochen werden und somit auch erlernt werden. 
-Gesamt wird es aber praktisch nie möglich sein, das gesamte Gebiet komplett zu verstehen und zu kennen.
-Es wird eine Möglichkeit geben, sich weiterzubilden und das Thema zu vertiefen. 
+Das Gebiet des maschinellen Lernens bietet einen nicht abschätzbaren Umfang an Möglichkeiten. 
+Trotzdem kann es auf einfache Grundregeln der Mathematik und Informatik herabgebrochen werden. 
+Praktisch wird es nie möglich sein, das gesamte Gebiet komplett zu verstehen und zu kennen.
+Es wird praktisch immer eine Möglichkeit geben, sich weiterzubilden und sich in das Thema noch weiter zu vertiefen. 
 Sollte trotzdem der Punkt erreicht werden, an dem nichts Neues mehr gelernt werden kann, dann sollte diese Möglichkeit dazu führen, die Forschung voranzutreiben und so für eine Weiterentwicklung zu sorgen. \newline
 
-%Zeitaufwändig bauen und trainieren & ressourcen intensive
 \noindent
 Ein Nachteil im Bereich des Machine Intelligence ist, dass sehr viel Zeit in das Entwickeln, Trainieren und Testen gesteckt werden muss. 
 Aus diesem Grund entwickelte Google einen eigenen Prozessor, welcher nur für solche Berechnungen ausgelegt worden ist. 
-In diesem Fall ist dies eine Tensor Processing Unit (TPU)\footnote{TPU: \url{https://cloudplatform.googleblog.com}}, welche auch im AlphaGO Projekt zum Beispiel zum Einsatz kommt. 
-So wurde der Großteil der Berechnungen für das Beispiel auf einer TitanX von Nvidia durchführt, welche für dieser Arbeit zur Verfügung gestellt worden ist. 
-Trotzdem ist die Zeit, in der eine algorithmische Lösung entwickelt wird, meist bei weitem größer, was auch erklärt, warum in diesem Gebiet seit einiger Zeit sehr viel Forschung betrieben wird. 
-
-%\noindent
-%beispiel auf titanX mit einer durchlaufzeit von 84 Sekunden pro epoche
-%danke schön dem betreuer
-%testinstanzen bei packet.net und auf eigener hardware
+In diesem Fall ist dies eine Tensor Processing Unit (TPU)\footnote{TPU: \url{https://cloudplatform.googleblog.com}}, welche auch im AlphaGO Projekt beispielsweise zum Einsatz kommt. 
+So wurde der Großteil der Berechnungen für das Beispiel auf einer TitanX von Nvidia durchführt, welche für diese Arbeit zur Verfügung gestellt worden ist. 
+Trotzdem ist die Zeit, in der eine algorithmische Lösung entwickelt wird, meist bei weitem größer.
+Dies erklärt auch, warum in diesem Gebiet seit einiger Zeit sehr viel Forschung betrieben wird. 
 
 \section{Ausblick}
 
-%sehr weitläufig einsetzbar
 \noindent
 Machine Intelligence und im Speziellen TensorFlow sind Techniken und Tools, welche sehr weitläufig eingesetzt werden können. 
 Im Detail kann TensorFlow oft zu Problemen führen, da diese Bibliothek praktisch keine Einschränkungen besitzt. 
 Da dies aber auf einem zu geringen, beziehungsweise technisch hohen Level agiert, wo sich der Benutzer sehr gut mit der Materie auskennen muss, existieren zu diesem Zweck Abstraktionen, wie zum Beispiel Keras\footnote{Keras: \url{https://keras.io/}}. 
-Die Möglichkeit von TensorFlow nicht nur CPU's und GPU's in einer Recheneinheit zu verwenden, sondern die Entwicklung auch auf mehrere Recheneinheiten zu verteilen und dies mit Unterstützung aus der Bibliothek, macht es zu einem sehr vielfältigen und einsatzfähigen Tool. 
-Zusätzlich besteht die Möglichkeit, ein System direkt in Produktion zu nehmen und dies mit wenig Aufwand, dies stellt einen weiteren Vorteil dar. \newline
+Die Möglichkeit von TensorFlow nicht nur CPU's und GPU's in einer Recheneinheit zu verwenden, sodass die Entwicklung mit Unterstützung durch die Bibliothek auf mehrere Recheneinheiten verteilt werden kann, macht es zu einem sehr vielfältigen und einsatzfähigen Tool. 
+Zusätzlich besteht die Möglichkeit ein System mit wenig Aufwand direkt in Produktion zu nehmen, dies stellt einen weiteren Vorteil dar. \newline
 
-%immer mehr relevant, nicht explizit entwickelter code sondern selbst entwickelte strukturen
 \noindent
 Die Idee, etwas nicht explizit zu programmieren, sondern das System die Muster oder die Lösung selber finden zu lassen, wird in Zukunft sehr wahrscheinlich noch sehr viel öfter zu sehen sein. 
 In diesem Fall wird es ein Austauschformat geben müssen, in welchem solche Systeme ausgetauscht werden können, wie heutzutage Daten mit Protokollen ausgetauscht werden und Logik mit Mathematik und Programmiersprachen abgebildet wird. 
-Eine Mischform existiert hier bereits von Microsoft und der Universität Cambridge \cite{deepcoder-learning-write-programs}, in dem ein Machine Intelligence System eine Problemstellung entgegennimmt und mit Hilfe von bestehenden Programmcode automatisch ein Programm entwickelt, das die gegebenen Problemstellung löst. 
+Eine Mischform existiert hier bereits von Microsoft und der Universität Cambridge \cite{deepcoder-learning-write-programs}, in dem ein Machine Intelligence System eine Problemstellung entgegennimmt und mit Hilfe von bestehendem Programmcode automatisch ein Programm entwickelt, das die gegebene Problemstellung löst. 
 In diesem Fall werden Codeteile zusammen kopiert und so zu einem Programm ausgebaut. \newline
 
-%unüberwachtes lernen im sinne eines kindes beim lernen
 \noindent
 Ein Gebiet, das zurzeit noch sehr stark erforscht wird, ist das unüberwachte Lernen. 
-Es stellt eine Möglichkeit dar, das menschliche Hirn und auch die Natur noch besser zu verstehen, birgt aber selbst sehr viel Unbekanntes. 
+Es stellt eine Möglichkeit dar, das menschliche Gehirn und auch die Natur noch besser zu verstehen, birgt aber selbst sehr viel Unbekanntes. 
 So arbeiten Forscher auf der gesamten Welt daran, diese Technik zu erklären und zu verstehen. 
-
-
-%grundlagen vertiefen
-%bessere ausnützung von ressourcen
-
-%\section{Dankesworte}
-
-
-
-
